# gmail-new-mail-counter

./: .gitignore  Cargo.toml  Readme.md  flake.nix
.github/workflows/: ci.yaml
src/: cli.rs  client.rs  lib.rs  main.rs
